CryptoCompare app for Andela Learning Community Assessment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CryptoCompare</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="click_below">Click either cards to convert</string>
 </resources>
